entity_macros/tests/ui/derive/ent/duplicate-multiple_fields.stderr
error: Already have a created timestamp elsewhere
  --> $DIR/duplicate-multiple_fields.rs:18:5
   |
18 |     created2: u64,
   |     ^^^^^^^^

error: Already have a last_updated timestamp elsewhere
  --> $DIR/duplicate-multiple_fields.rs:24:5
   |
24 |     last_updated2: u64,
   |     ^^^^^^^^^^^^^
